--- a/src/App.scss
+++ b/src/App.scss
@@ -28,7 +28,7 @@
             justify-content: center;
             flex-direction: column;
             text-align: center;
-            font-size: 12px;
+            line-height: 1.6;
             margin-right: 30px;
             border-radius: 30px;
             padding: 30px 0;
@@ -41,6 +41,15 @@
 
             &:last-child {
                 margin-right: 0;
+            }
+
+            h1 {
+                font-weight: 600;
+                font-size: 20px;
+            }
+
+            h2 {
+                font-size: 16px;
             }
 
             // 결과 상태
